 - Deprecated the StringTemplate mechanism, replaced by a more seamless ReferenceTemplate approach,
   less intrusive. The following classes were deprecated and will be removed in the next
   release: StringTemplate, StringTemplateRepresentation, CallModel, Model, MapModel.
 - Extractor was deprecated and replaced by the new Route class.
 
[Enhancements] 
 - Add new constructor to Tag for weak tags taking an unquoted opaque value. Fixes #201. 
   Suggested by Chris Grindstaff
 - Updated Spring library to 2.0.1
 - Refactored the JdbcClient to return XML result sets (using a new RowSetRepresentation class). In addition, the
   XML request can now contain several SQL statements to be executed as a batch. Contributed by Thierry Boileau. 
 - Added an URI resolver to the Transformer based on the context's dispatcher. That will allow the usage of
   the "document()" XPath methods and other imports to be defined in XSLT stylesheets. Fixes #125.
 - Added support for CheckStyle (disabled by default). The CheckStyle configuration file is "build/checks.xml", 
   currently a clone of sun_checks.xml. Suggested by Piyush Purang.
 - Improved CheckStyle Ant task: not failing for style violations and HTML reports for each module. Contributed by Piyush Purang.
 - Updated Jetty 6.1 to RC0 version.
 
1.0 beta 21 (2006-11-26)
[Bugs fixed]
 - Fixed potential NPE when some JAR files are missing (no API implementation, no connector found, etc.). 
   Reported by Dave Pawson.
 - Reenabled the content negotiation by default for Directory instances. This prevented the correct serving of
   index files in tutorial. Reported by Dave Pawson.
 - Fixed ServerServlet which forgot to set the proper Servlet Context on the Application. Reported by Evan 
   DiBiase.
 - Fixed NPE in Guard when no challenge response is set. Reported by Dave Pawson.
 - Integrated patches and bug fixes (few NPEs) detected by FindBugs. Contributed by Piyush Purang.