@@ -30,6 +30,8 @@ Changes log
    less intrusive. The following classes were deprecated and will be removed in the next
    release: StringTemplate, StringTemplateRepresentation, CallModel, Model, MapModel.
  - Extractor was deprecated and replaced by the new Route class.
+ - Renamed ReferenceList.getRepresentation() to getTextRepresentation().
+ - Tag now extends Metadata, getOpaqueTag() was deprecated, use getName() instead.
  
 [Enhancements] 
  - Add new constructor to Tag for weak tags taking an unquoted opaque value. Fixes #201. 
